# OsuBot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.TXT  Makefile  README.md  build.sh
cmake/: OsuBotConfig.h.in  OsuBotTestsConfig.h.in
source/: OsuBot.cpp  OsuBot.hpp  OsuBotConfig.h.in  main.cpp
source/Finder/: OsuFinder.cpp  OsuFinder.hpp
source/Logger/: Logger.hpp
source/Parser/: OsuKey.cpp  OsuKey.hpp  OsuParser.cpp  OsuParser.hpp
tests/: CMakeLists.txt
tests/source/: CMakeLists.txt
tests/source/TestFinder/: CMakeLists.txt  main.cpp
tests/source/TestParser/: CMakeLists.txt  main.cpp
